# rmus2022

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build.sh  client_start.sh  custom.bashrc  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  server_healthcheck.sh  server_launch.sh
.catkin_tools/profiles/default/: config.yaml
.devcontainer/: devcontainer.json
deploy_instructions/: 01_simulation_assessment.txt  02_detect_exchange_station.md  03_localization_and_navigation.md  04_grasp_ore.md  05_grasp_ore_2.md  final.md
server_patches/: laser_on_ground.patch
src/apriltag_marker_detector/: CMakeLists.txt  package.xml
src/apriltag_marker_detector/launch/: detect_bag.launch  detection_evaluation.launch
src/apriltag_marker_detector/src/: async_executor.hpp  detector.cpp  detector.hpp  main.cpp  orientation_fixer.cpp  orientation_fixer.hpp  tag_family.cpp  tag_family.hpp
src/apriltag_marker_detector/src/apriltag/: tagRmus2022.c  tagRmus2022.h  tagRobomaster2021.c  tagRobomaster2021.h  tagRobomaster2022.c  tagRobomaster2022.h
src/apriltag_marker_detector/src/apriltag/common/: homography.c
src/apriltag_msgs/: CMakeLists.txt  package.xml
src/apriltag_msgs/msg/: ApriltagMarker.msg  ApriltagMarkerArray.msg
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/launch/: grasp_evaluation.launch  grasp_place.rviz  grasp_test.launch
src/arm_controller/rviz/: grasp_place.rviz
src/arm_controller/samples/: test_action.cpp
src/arm_controller/src/: arm_controller.cpp  arm_gripper.cpp  arm_gripper.hpp  async_wait.cpp  async_wait.hpp  chassis_move.cpp  chassis_move.hpp  grasp_place_action.cpp  grasp_place_action.hpp  utils.hpp
src/arm_controller_srvs/: CMakeLists.txt  package.xml
src/arm_controller_srvs/action/: GraspPlace.action
src/ep_driver/: CMakeLists.txt  package.xml
src/ep_driver/launch/: bringup.launch  ep_description.launch  ep_realsense.launch  test_odom.launch
src/ep_driver/scripts/: ep_comm_node.py  odom_pub.py
src/ep_driver/urdf/: ep_description.xacro  ep_description_sim.xacro
src/finite_state_machine/: CMakeLists.txt  package.xml
src/finite_state_machine/launch/: robotstate.launch
src/finite_state_machine/scripts/: Robot.py  Robotstate.py
src/graspore/: CMakeLists.txt  package.xml
src/graspore/scripts/: grasp_cube.py
src/odom_republisher/: CMakeLists.txt  package.xml
src/odom_republisher/src/: odom_republisher.cpp
src/planeore/: CMakeLists.txt  package.xml
src/planeore/scripts/: place_cube.py
src/rmus_bringup/: CMakeLists.txt  package.xml
src/rmus_bringup/config/: laser_filter.yaml
src/rmus_bringup/launch/: overall.launch  real_robot_test.launch  realsense.launch  rplidar.launch  test.launch
src/rmus_cartographer/: CMakeLists.txt  package.xml
src/rmus_cartographer/config/: localization.lua  mapping.lua
src/rmus_cartographer/launch/: localization.launch  localization_bag.launch  mapping.launch  mapping_bag.launch  replay_vive.launch
src/rmus_cartographer/launch/modules/: cartographer_localization.launch  cartographer_mapping.launch  mapping.launch
src/rmus_cartographer/maps/20220326_01/: map.pbstream  map.yaml
src/rmus_cartographer/maps/20220501_01/: map.pbstream  map.pgm  map.yaml
src/rmus_cartographer/maps/20220501_02/: map.pbstream  map.pgm  map.yaml
src/rmus_cartographer/maps/20220501_03/: map.pbstream  map.pgm  map.yaml
src/rmus_cartographer/rviz/: mapping.rviz  replay_vive.rviz
src/rmus_cartographer/scripts/: write_map.sh
src/rmus_decision/: CMakeLists.txt  package.xml
src/rmus_decision/config/: decision.yaml
src/rmus_decision/launch/: arm_and_decision.launch  decision_node.launch
src/rmus_decision/samples/: print_2d_pose.cpp
src/rmus_decision/src/: decision_node.cpp  decision_node.hpp  rmus_decision.cpp
src/rmus_navigation/: CMakeLists.txt  package.xml
src/rmus_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml
src/rmus_navigation/launch/: navigation.launch
src/rmus_navigation/launch/modules/: move_base.launch
src/rmus_navigation/maps/20220326_01_modified/: map.pgm  map.yaml
src/rmus_navigation/maps/20220520_ground/: map.pbstream  map.pgm
src/rmus_navigation/maps/20220520_ground_modified/: map.pgm  map.yaml
src/rmus_navigation/rviz/: navigation.rviz
src/sim2real_ep/carto_navigation/: CMakeLists.txt
src/sim2real_ep/carto_navigation/launch/: cartographer.launch  cartographer_localization.launch  localization.launch  map_writer.sh  mapping.launch  move_base.launch  navigation.launch  overall.launch  rgbd_to_pointcloud.launch
src/sim2real_ep/carto_navigation/maps/: latest  map.pbstream  map.pgm  map.yaml
src/sim2real_ep/carto_navigation/param/: cartographer_2d.lua  cartographer_2d_localization.lua  costmap_common_params.yaml  global_planner_params.yaml  local_planner_params.yaml
src/sim2real_ep/carto_navigation/rviz/: mapping.rviz  navigation.rviz
src/sim2real_ep/ep_bringup/: CMakeLists.txt
src/sim2real_ep/ep_description/: CMakeLists.txt
src/sim2real_ep/ep_description/urdf/: ep_description.xacro  ep_description_sim.xacro
src/sim2real_ep/ep_detect_and_grasp/: CMakeLists.txt  detect_cube.py  grasp_cube.py  package.xml  place_cube.py  redmarkerdetection.c  redmarkerdetection.pyx  setup.py
src/sim2real_ep/ep_teleop/: CMakeLists.txt
src/sim2real_ep/rtab_navigation/: CMakeLists.txt  package.xml
src/sim2real_ep/rtab_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/sim2real_ep/rtab_navigation/launch/: depthimage_to_laserscan.launch  move_base.launch  rtab_mapping.launch  rtab_navigation.launch
src/sim2real_ep/rtab_navigation/rviz/: rtab.rviz
sylconfig/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  target.txt
sylconfig/出发前履带参数/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base_params.yaml
(+19 files in other folders)
