<package format="2">
    <name>arm_controller</name>
    <version>0.0.0</version>
    <description>arm_controller</description>
    <maintainer email="yushijinhun@gmail.com">Haowei Wen</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2_eigen</depend>
    <depend>actionlib_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>apriltag_msgs</depend>

    <exec_depend>message_generation</exec_depend>

</package>
