<package format="2">
    <name>odom_republisher</name>
    <version>0.0.0</version>
    <description>odom_republisher</description>
    <maintainer email="yushijinhun@gmail.com">Haowei Wen</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>

</package>
