<package format="2">
    <name>rmus_decision</name>
    <version>0.0.0</version>
    <description>rmus_decision</description>
    <maintainer email="yushijinhun@gmail.com">Haowei Wen</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>tf2_eigen</depend>
    <depend>arm_controller_srvs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>apriltag_msgs</depend>
    <depend>move_base_msgs</depend>

</package>
